add unique username per user functionality

--- a/.env.local
+++ b/.env.local
@@ -3,7 +3,7 @@ DEBUG=True
 AWS_SES_ACCESS_KEY_ID='AKIAZ53IUMKLYVHK7BWR'
 AWS_SES_SECRET_ACCESS_KEY='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'
 AWS_SES_REGION_NAME='ap-south-1'
-AWS_SES_FROM_EMAIL='salman@applyat.io'
+AWS_SES_FROM_EMAIL='aakrambhutta@gmail.com'
 DOMAIN='localhost:3000'
 AUTH_COOKIE_SECURE=False
 REDIRECT_URLS='http://localhost:3000/auth/google,http://localhost:3000/auth/facebook'
