--- a/Pipfile
+++ b/Pipfile
@@ -36,6 +36,7 @@ social-auth-app-django = "==5.4.0"
 social-auth-core = "==4.5.1"
 sqlparse = "==0.4.4"
 urllib3 = "==2.0.7"
+drf-nested-routers = "*"
 
 [dev-packages]
 
