tags functionality complete

--- a/.env.local
+++ b/.env.local
@@ -5,7 +5,7 @@ AWS_SES_SECRET_ACCESS_KEY='i3Kc1NMC8gM15wYpzQEoLvsvGZIZ/5tNvz8mqJ6f'
 AWS_SES_REGION_NAME='ap-south-1'
 AWS_SES_FROM_EMAIL='aakrambhutta@gmail.com'
 DOMAIN='localhost:3000'
-AUTH_COOKIE_SECURE=False
+AUTH_COOKIE_SECURE=True
 REDIRECT_URLS='http://localhost:3000/auth/google,http://localhost:3000/auth/facebook'
 GOOGLE_AUTH_KEY=782797112401-378qvshvamg3u7dv9e5mha5h0rht68b2.apps.googleusercontent.com
 GOOGLE_AUTH_SECRET_KEY=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
